crates/nash-report/tests/parse/declaration/snapshots/parse__declaration__impl___implementation_head_requires_argument.snap
---
source: crates/nash-report/tests/parse/declaration/impl_.rs
assertion_line: 10
description: impl Eq where
info: diagnostic
---
nash::syntax

  × Expected a trait name and type arguments.
   ╭─[src/Main.nash:1:6]
 1 │ impl Eq where
   ·      ─
   ╰────
  help: Write `impl Trait Type where`.
