crates/nash-report/tests/parse/declaration/snapshots/parse__declaration__impl___implementation_head_requires_trait.snap
---
source: crates/nash-report/tests/parse/declaration/impl_.rs
assertion_line: 5
description: impl int where
info: diagnostic
---
nash::syntax

  × Expected a trait name and type arguments.
   ╭─[src/Main.nash:1:6]
 1 │ impl int where
   ·      ─
   ╰────
  help: Write `impl Trait Type where`.
