crates/nash-report/tests/parse/declaration/snapshots/parse__declaration__impl___implementation_method_cannot_have_annotation.snap
---
source: crates/nash-report/tests/parse/declaration/impl_.rs
assertion_line: 20
description: "impl Eq int where\n    eq : int -> bool\n"
info: diagnostic
---
nash::syntax

  × Expected `=` in the definition of `eq`.
   ╭─[src/Main.nash:2:8]
 1 │ impl Eq int where
 2 │     eq : int -> bool
   ·        ─
   ╰────
  help: Separate the arguments and body with `=`.
