crates/nash-report/tests/parse/declaration/snapshots/parse__declaration__impl___implementation_requires_where.snap
---
source: crates/nash-report/tests/parse/declaration/impl_.rs
assertion_line: 15
description: impl Eq int
info: diagnostic
---
nash::syntax

  × Expected `where` after the impl head.
   ╭─[src/Main.nash:1:12]
 1 │ impl Eq int
   ·            ─
   ╰────
  help: Add `where`, then indent the method definitions.
